crates/reinhardt-core/macros/tests/ui/routes_registration/fail/no_client_resolvers_with_client_inventory.stderr
error: `#[routes(client_inventory)]` cannot be combined with `server_only`, `no_client_resolvers`, or `no_ws_resolvers` — `client_inventory` registers the WASM `ClientRouter` surface that the suppression flags disable. Drop one of the flags.
 --> tests/ui/routes_registration/fail/no_client_resolvers_with_client_inventory.rs:8:31
  |
8 | #[routes(no_client_resolvers, client_inventory)]
  |                               ^^^^^^^^^^^^^^^^
